# weather_information_system

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
python_bitmap/: korean_bitmap16*16.py  korean_bitmap8*16.py  png_bitmap.py
src/: CMakeLists.txt  main.cpp
src/http_weather/: http_weather.c  http_weather.h  lwipopts.h
src/http_weather/ntp_sync/: ntp_client.c  ntp_client.h
src/picow_lcd/: display.c  display.h
src/picow_lcd/lcd_sdk/: font.c  font.h  font5x7.c  font5x7.h  icon.c  icon.h  lcd.c  lcd.h
